--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,7 +1,83 @@
-@import url('https://fonts.googleapis.com/css?family=Slabo+27px');
+@import url('https://fonts.googleapis.com/css?family=Roboto');
 
-$font: 'Slabo 27px', serif;
+$font: 'Roboto', sans-serif;
 
 body {
   font-family: $font;
+  background-color: gray;
+}
+
+main {
+  margin: 10px;
+
+  button {
+    // button;
+  }
+}
+
+.movies {
+  .movie {
+    background-color: white;
+    width: 90%;
+    height: 200px;
+    margin: auto;
+    padding: 10px;
+    display: flex;
+
+    .image {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      overflow: hidden;
+      width: 35%;
+
+      img {
+        flex-shrink: 0;
+        min-width: 100%;
+        min-height: 100%
+      }
+
+    }
+
+    .text {
+      flex: 2 auto;
+    }
+  }
+}
+
+@media (max-width: 600px) {
+  .movies {
+    background-color: gray;
+
+    .movie {
+      background-color: white;
+      width: 90%;
+      height: 500px;
+      margin: 10px;
+      padding: 0px;
+      display: flex;
+      flex-wrap: wrap;
+
+      .image {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        // overflow: hidden;
+        height: 300px;
+        flex: 1 100%;
+
+        img {
+          flex-shrink: 0;
+          height: auto;
+          min-height: 100%
+        }
+
+      }
+
+      .text {
+        flex: 2 auto;
+      }
+
+    }
+  }
 }
