--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,10 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
 $font: 'Roboto', sans-serif;
+$background: #F3F3F3;
 
 body {
   font-family: $font;
-  background-color: gray;
+  background-color: $background;
 }
 
 main {
@@ -16,12 +17,13 @@ main {
 }
 
 .movies {
+
   .movie {
     background-color: white;
     width: 90%;
     height: 200px;
-    margin: auto;
-    padding: 10px;
+    margin: 10px auto;
+    padding: 0px;
     display: flex;
 
     .image {
@@ -29,7 +31,7 @@ main {
       justify-content: center;
       align-items: center;
       overflow: hidden;
-      width: 35%;
+      width: 40%;
 
       img {
         flex-shrink: 0;
@@ -40,42 +42,30 @@ main {
     }
 
     .text {
-      flex: 2 auto;
+      padding: 20px;
     }
   }
 }
 
 @media (max-width: 600px) {
   .movies {
-    background-color: gray;
-
     .movie {
-      background-color: white;
-      width: 90%;
       height: 500px;
-      margin: 10px;
-      padding: 0px;
       display: flex;
       flex-wrap: wrap;
 
       .image {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        // overflow: hidden;
         height: 300px;
         flex: 1 100%;
 
         img {
-          flex-shrink: 0;
           height: auto;
-          min-height: 100%
         }
 
       }
 
       .text {
-        flex: 2 auto;
+
       }
 
     }
