--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,7 +1,8 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:400,700');
+@import url( 'https://fonts.googleapis.com/css?family=Roboto:400,700');
 
 $font: 'Roboto', sans-serif;
-$background: #F3F3F3;
+$background: #F2F2F2;
+$shadow: #E5E5E5;
 
 body {
   font-family: $font;
@@ -11,12 +12,19 @@ body {
 main {
   margin: 10px;
 
-  button {
-    // button;
+  .movieBtn {
+    font-family: $font;
+    font-weight: 700;
+    font-size: 0.8em;
+    background: white;
+    border: 1px solid $shadow;
+    border-radius: 5px;
+    padding: 10px;
   }
 }
 
 .movies {
+  padding-top: 20px;
 
   .movie {
     background-color: white;
@@ -25,6 +33,9 @@ main {
     margin: 10px auto;
     padding: 0px;
     display: flex;
+    box-shadow: 3px 3px 2px $shadow;
+    -webkit-box-shadow: 3px 3px 2px $shadow;
+    -moz-box-shadow: 3px 3px 2px $shadow;
 
     .image {
       height: 250px;
@@ -32,14 +43,13 @@ main {
       justify-content: center;
       align-items: center;
       overflow: hidden;
-      width: 40%;
+      width: 50%;
 
       img {
         min-width: 100%;
         min-height: 100%;
         object-fit: cover;
       }
-
     }
 
     .text {
@@ -47,7 +57,7 @@ main {
       width: 60%;
 
       .title {
-        font-size: 1.5em;
+        font-size: 1.4em;
         font-weight: 700;
       }
 
@@ -55,8 +65,8 @@ main {
         font-weight: 700;
       }
 
-      .year {
-
+      p {
+        line-height: 40%;
       }
     }
   }
@@ -76,13 +86,11 @@ main {
         img {
           height: auto;
         }
-
       }
 
       .text {
-
+        width: 100%;
       }
-
     }
   }
 }
